--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Privacy Policy</h1>
-      <h4>Last updated: 19th Apr 2025</h4>
+      <h4>Last updated: 11th May 2025</h4>
      
       <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.
 
@@ -88,5 +88,5 @@ Legal basis for processing. Our legal bases for processing your Personal Informa
         <p>We may update this Privacy Policy from time to time. When we do, we will post an updated version on this page, unless another type of notice is required by applicable law </p>
       </ul>
       <h2>Contact us</h2>
-      <p>Email: <a href="mailto:analyzelife.customer@gmail.com">analyzelife.customer@gmail.com</a><br/>
-      Developer: Akshita Batra<br/></p>
+      <p>Email: <a href="mailto:contact@ameritus.in">contact@ameritus.in</a><br/>
+      Developer: Ameritus Hospital<br/></p>
