--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      
       <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.
 
-Ameritus Hospital  ("we", "our", or "us") operates the MiGynae mobile application (the "Service").</p>
+MIMEDIC ("we", "our", or "us") operates the MiGynae mobile application (the "Service").</p>
       <h2>1. Personal Information that we collect </h2>
       <p>We collect personal information relating to you (“Personal Information”) as follows:</p>
       <p><strong>Personal information that you provide</strong></p>
@@ -88,5 +88,5 @@ Legal basis for processing. Our legal bases for processing your Personal Informa
         <p>We may update this Privacy Policy from time to time. When we do, we will post an updated version on this page, unless another type of notice is required by applicable law </p>
       </ul>
       <h2>Contact us</h2>
-      <p>Email: <a href="mailto:contact@ameritus.in">contact@ameritus.in</a><br/>
-      Developer: Ameritus Hospital<br/></p>
+      <p>Email: <a href="mailto:shuchita@mimedic.org">shuchita@mimedic.org</a><br/>
+      Developer: MIMEDIC<br/></p>
